# cpp-python-communication

./: .gitignore
CppServer/: CMakeLists.txt  Server.hpp  functions.cpp  functions.hpp  main.cpp  pch.hpp
CppServer/rapidjson/include/rapidjson/: allocators.h
PythonClient/: main.py
